[package]
name = "hcbs-utils"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "cgroup",
    "cpuset",
    "cpu_control",
    "debugfs",
    "hcbs",
    "proc",
    "sched_policy",
    "time",
    "cgroup_is_v2",
]
cgroup = ["proc"]
cgroup_is_v1 = ["cgroup"]
cgroup_is_v2 = ["cgroup"]
cpu_control = []
cpuset = ["proc", "dep:nom"]
debugfs = []
hcbs = ["cgroup", "cgroup_is_v2", "cpuset"]
proc = ["dep:sysinfo"]
sched_policy = ["proc"]
time = ["dep:eva-rt-common"]

[dependencies]
anyhow = "1.0.100"
libc = "0.2.180"
log = "0.4.29"
nom = { version = "8.0.0", optional = true }
sysinfo = { version = "0.38.0", optional = true }
eva-rt-common = { version = "0.1.1", optional = true }
nix = { version = "0.31.2", features = [
    "mount",
    "sched"
] }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["cgroup_is_v1", "cgroup_is_v2"],
    ["cgroup_is_v1", "hcbs"],
]
